Updated into page
Updated into page explore boxes to animate

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="row">
 
             <div class="col-md-6">
-                <div class="panel panel-info">
+                <div class="panel intro-vis-panel">
                     <div class="panel-body index-box">
                         <div class="text-left">
                             <p>
@@ -57,7 +57,7 @@
 
             </div>
             <div class="col-md-6">
-                <div class="panel panel-info">
+                <div class="panel intro-vis-panel">
                     <div class="panel-body index-box">
                         <div class="text-left">
                             <p>
@@ -74,24 +74,30 @@
         <div class="row">
             <div class="col-md-3">
                 <a href="map.html">
-                    <div class="panel panel-info">
+                    <div class="panel explore-data-panel">
                         <div class="panel-heading"><h3 class="panel-title">Explore the Data</h3></div>
-                        <div class="panel-body" style="background: url('img/where.png') no-repeat !important;height: 250px">
-
+                        <div class="panel-body" >
+                            <div class="explore-data-container">
+                                <p>Where did the Incidents Occur?</p>
+                                <img src="img/where.png">
+                            </div>
                         </div>
                     </div>
                 </a>
                 <a href="map.html">
-                    <div class="panel panel-info">
+                    <div class="panel explore-data-panel">
                         <div class="panel-heading"><h3 class="panel-title">Explore the Data</h3></div>
-                        <div class="panel-body" style="background: url('img/where2.png') no-repeat !important;height: 250px">
-
+                        <div class="panel-body">
+                            <div class="explore-data-container">
+                                <p>Where did the Incidents Occur?</p>
+                                <img src="img/where2.png">
+                            </div>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-md-6">
-                <div class="panel panel-info">
+                <div class="panel explore-summary-panel">
                     <div class="panel-heading"><h3 class="panel-title">Summary</h3></div>
                     <div class="panel-body">
                         <b>Background to the conflict</b>
@@ -122,18 +128,24 @@
             </div>
             <div class="col-md-3">
                 <a href="what.html">
-                    <div class="panel panel-info">
+                    <div class="panel explore-data-panel">
                         <div class="panel-heading"><h3 class="panel-title">Explore the Data</h3></div>
-                        <div class="panel-body" style="background: url('img/what.png') no-repeat !important;height: 250px;">
-
+                        <div class="panel-body">
+                            <div class="explore-data-container">
+                                <p>What type of explosives were used?</p>
+                                <img src="img/what.png">
+                            </div>
                         </div>
                     </div>
                 </a>
                 <a href="how.html">
-                    <div class="panel panel-info">
+                    <div class="panel explore-data-panel">
                         <div class="panel-heading"><h3 class="panel-title">Explore the Data</h3></div>
-                        <div class="panel-body" style="background: url('img/how.png') no-repeat !important;height: 250px;">
-
+                        <div class="panel-body">
+                            <div class="explore-data-container">
+                                <p>How the Incidents Occurred?</p>
+                                <img src="img/how.png">
+                            </div>
                         </div>
                     </div>
                 </a>
