--- a/process.html
+++ b/process.html
@@ -58,7 +58,7 @@
         </div>
 
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <div class="page-header">
                     <h4>Process Book</h4>
                 </div>
@@ -68,7 +68,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <div class="page-header">
                     <h4>Project Versions</h4>
                 </div>
@@ -81,6 +81,16 @@
                 <div class="row">
                     <div class="col-md-12">
                         <a href="http://nato-project.github.io/v1/" target="_blank" class="btn btn-default">Version 1 Prototype</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="page-header">
+                    <h4>Project Source Code</h4>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="https://github.com/nato-project/nato-project.github.io" target="_blank" class="btn btn-default">View</a>
                     </div>
                 </div>
             </div>
