--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             In February 2014, the Kremlin-supported government of Ukraine collapsed. The demise of the regime was brought about by bitter protests over a decision by the government to reject closer relations with the European Union.
                             What followed the turmoil was the emergence of a pro-Western, pro-reform government and an energized public generally anxious to lessen Moscows's influence and committed to addressing the need for serious reforms.
                         </p>
-                        <p> Ukraine's problems are not solely political and economical. Russia responded to the chnage over government in 2014 by seizing Ukraine's Crimea region and annexing it.</p>
+                        <p> Ukraine's problems are not solely political and economical. Russia responded to the change of government in 2014 by seizing Ukraine's Crimea region and annexing it.</p>
 
                         <b>Improvised Explosive Devices (IED)</b>
                         <p></p>
