--- a/map.html
+++ b/map.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/how.css">
 </head>
 
 <body>
@@ -66,7 +67,7 @@
         <div class="row-spacer"></div>
 
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-6">
                 <div class="form-group">
                     <label><strong>Region color</strong>&nbsp;
                         <select class="form-control" id="regionColorSelect" onchange="regionColorSelect()">
@@ -80,10 +81,6 @@
                             <option value="WIA">Persons Wounded</option>
                         </select>
                     </label>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="form-group">
                     <label><strong>Circle color</strong>&nbsp;
                         <select class="form-control" id="circleColorSelect" onchange="circleColorSelect()">
                             <option value="type">IED Type</option>
@@ -92,7 +89,7 @@
                     </label>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-6">
 
             </div>
         </div>
