Updated page navigations in how and what pages
Updated page navigations in how and what pages

--- a/how.html
+++ b/how.html
@@ -39,7 +39,7 @@
                         Find out more about where these incidents occurred.
                     </p>
 
-                    <a href="map.html" class="btn btn-primary" >Continue to Where Exploration <i class="fa fa-play" aria-hidden="true"></i></a>
+                    <a href="map.html" class="btn btn-primary" >Continue to Map Exploration <i class="fa fa-play" aria-hidden="true"></i></a>
                     <br>
                     <br>
                     <p>
