--- a/what.html
+++ b/what.html
@@ -43,14 +43,18 @@
         <div class="col-md-4">
             <div class="fact">
                 <p>
-                    Find out more about how these incidents occured by going to the next page.
+                    Find out more about how these incidents occurred by going to the next page.
                 </p>
+                <a href="how.html" class="btn btn-primary" >Continue to Incident Report Analysis <i class="fa fa-play" aria-hidden="true"></i></a>
                 <br>
                 <br>
                 <br>
-                <br>
-                <br>
-                <a href="how.html" class="btn btn-primary" >Continue to Incident Analysis <i class="fa fa-play" aria-hidden="true"></i></a>
+                <p>
+                    Find out more about where these incidents occurred.
+                </p>
+
+                <a href="map.html" class="btn btn-primary" >Continue to Map Exploration <i class="fa fa-play" aria-hidden="true"></i></a>
+
             </div>
         </div>
     </div>
