Updated page navigation to other pages
Updated page navigation to other pages

--- a/map.html
+++ b/map.html
@@ -47,11 +47,14 @@
                     <p>
                         In the reported incidents, many different types of IEDs were mentioned. Some types are more dangerous than others.
                     </p>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
                     <a href="what.html" class="btn btn-primary" >Continue to IED Types Exploration <i class="fa fa-play" aria-hidden="true"></i></a>
+                    <br>
+                    <br>
+                    <p>
+                        Find out more about how these incidents occurred.
+                    </p>
+                    <a href="how.html" class="btn btn-primary" >Continue to Incident Report Analysis <i class="fa fa-play" aria-hidden="true"></i></a>
+
                 </div>
             </div>
         </div>
