Fixed text comments to vis
Fixed text comments to vis

--- a/how.html
+++ b/how.html
@@ -32,10 +32,8 @@
                         By clustering the incident reports in this method we can see that most similar incidents that were reported in metro stations and administration buildings were hoax or false reports which leaded to no causalities.
                     </p>
                     <div class="button-list">
-                        <span><button type="button" class="btn btn-primary" onclick="showMeHoaxes()">Show Me Hoaxes</button></span>
-                        <span><button type="button" class="btn btn-primary" onclick="showMeFound()">Show Me Found</button></span>
-                        <span><button type="button" class="btn btn-primary" onclick="showMeRCIED()">Show Me RCIEDs</button></span>
-                        <span><button type="button" class="btn btn-primary" onclick="showMeVBIED()">Show Me VBIEDs</button></span>
+                        <span><button type="button" class="btn btn-primary" onclick="showMeSoldiersKilled()">Reports where Soldiers were killed</button></span>
+                        <span><button type="button" class="btn btn-primary" onclick="showMeWeaponsNoCasuality()">Reports with weapons/explosives but no Casualty</button></span>
                     </div>
                 </div>
             </div>
