Add IED type description on the right detail pane

--- a/what.html
+++ b/what.html
@@ -89,9 +89,10 @@
                 <div id="sankeyVis"></div>
             </div>
          <div class="col-md-4">
+             <small><div id="text-timeline-ied-type"></div></small>
              <section id="text-timeline" class="cd-container">
-                </section>
-            </div>
+             </section>
+         </div>
         </div>
         <div class="row">
             <div class="col-md-4">
