Modified some text paragraphs

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                     <div class="panel-body index-box">
                         <div class="text-left">
                             <p>
-                                We will analyse the various incidents that occurred between January 2014 to December 2015.
-                                Our exploration of over 600 Improvised Explosive Devices (IED) incidents in Ukraine over the past 2 years for the purpose of highlighting and better understanding the temporal, geographical and political patterns in the data.
+                                We will analyse the various incidents that occurred between January 2014 and December 2015.
+                                Our exploration covers over 600 Improvised Explosive Devices (IED) incidents in Ukraine over the past 2 years with the purpose of highlighting and better understanding the temporal, geographical and political patterns in the data.
                                 The following shows the summary of the incidents that happened.
                                 <br>
                                 <br>
@@ -107,7 +107,7 @@
                         <b>Background to the conflict</b>
                         <p>
                             In February 2014, the Kremlin-supported government of Ukraine collapsed. The demise of the regime was brought about by bitter protests over a decision by the government to reject closer relations with the European Union.
-                            What followed the turmoil was the emergence of a pro-Western, pro-reform government and an energized public generally anxious to lessen Moscows's influence and committed to addressing the need for serious reforms.
+                            What followed the turmoil was the emergence of a pro-Western, pro-reform government and an energized public generally anxious to lessen Moscow's influence and committed to addressing the need for serious reforms.
                         </p>
                         <p> Ukraine's problems are not solely political and economical. Russia responded to the change of government in 2014 by seizing Ukraine's Crimea region and annexing it.</p>
 
