--- a/what.html
+++ b/what.html
@@ -75,7 +75,7 @@
                 <div class="form-group">
                     <label class="radio-inline"><input type="radio" name="reporttype" value="byType" checked>Casualties by Incident Type</label>
                     <label class="radio-inline"><input type="radio" name="reporttype" value="byTypeAndOutcome">Incidents by Type and Outcome</label>
-                    <label class="radio-inline"><input type="radio" name="reporttype" value="byRegion">Incidents by Region</label>
+                    <label class="radio-inline"><input type="radio" name="reporttype" value="byRegion">Casualties by Region</label>
                 </div>
             </div>
             <div class="col-md-4">
