Updated home page text
Updated home page text

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div class="bgimage-text">
                         <p class="line1">Since the collapse of the Kremlin-supported government in February 2014, Ukraine has been affected by political and economic turmoil.</p>
 
-                        <p class="line2">What followed the turmoil was the emergence of an energized public who would do anything to get their freedom.</p>
+                        <p class="line2">What followed the collapse of the government was a period of uncertainty, armed conflict, bloody clashes between partizans of the two factions and a significant number of people killed or wounded. </p>
                     </div>
                 </div>
             </div>
