--- a/process.html
+++ b/process.html
@@ -23,7 +23,7 @@
         </div>
         <div class="row">
             <div class="col-md-4">
-                <div class="panel panel-primary" style="height: 278px;">
+                <div class="panel explore-data-panel" style="height: 278px;">
                     <div class="panel-heading">
                         <h3 class="panel-title">Valérie Lavigne</h3>
                     </div>
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="panel panel-primary" style="height: 278px;">
+                <div class="panel explore-data-panel" style="height: 278px;">
                     <div class="panel-heading">
                         <h3 class="panel-title">Marius Panga</h3>
                     </div>
@@ -45,7 +45,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="panel panel-primary" style="height: 278px;">
+                <div class="panel explore-data-panel" style="height: 278px;">
                     <div class="panel-heading">
                         <h3 class="panel-title">Shivas Jayaram</h3>
                     </div>
@@ -64,7 +64,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <a href="Process%20_Book.pdf" target="_blank" class="btn btn-default">Download</a>
+                        <a href="Process%20_Book.pdf" target="_blank" class="btn btn-default">View</a>
                     </div>
                 </div>
             </div>
