--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
                         <b>Background to the conflict</b>
                         <p></p>
                         <p>
-                            In February 2014, the Kremlin-supported government of Ukraine collapsed. The demise of the regime was brought about by bitter protests over a decision by the government to reject closer relations with the European Union.
+                            On February 2014, the Kremlin-supported government of Ukraine collapsed. The demise of the regime was brought about by bitter protests over a decision by the government to reject closer relations with the European Union.
                             What followed the turmoil was the emergence of a pro-Western, pro-reform government and an energized public generally anxious to lessen Moscow's influence and committed to addressing the need for serious reforms.
                         </p>
                         <p> Ukraine's problems are not solely political and economical. Russia responded to the change of government in 2014 by seizing Ukraine's Crimea region and annexing it.
-                            The influence of Russian spread to eastern Ukraine. This created two groups that were behind separate interest, the eastern Ukraine and the rest of the country. Thus the conflict between them for Russian vs western interests.
+                            The influence of Russia spread to eastern Ukraine. This created two groups that were behind separate interest, the eastern Ukraine and the rest of the country. Thus the conflict between them for Russian vs western interests.
                             The separatist militants are financed and equipped by Russian forces whereas the nationalist volunteers operate with Ukrainian security forces. Large amount of conventional weaponry is readily available to both side which has resulted in an increased usage of Improvised Explosives Devices (IED).
                         </p>
 
@@ -173,7 +173,8 @@
                         <div class="panel-heading"><h3 class="panel-title">Read about it</h3></div>
                         <div class="panel-body" >
                             <div class="read-data-container">
-                                <p>Ukraine conflict: Why is east hit by conflict?</p>
+                                <p>Ukraine conflict: Why is east hit by conflict?
+                                </p>
                                 <img src="img/bbc.png">
                             </div>
                         </div>
