Updated home page content

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                 <div class="bgimage-inside">
 
                     <div class="bgimage-text">
-                        <p class="line1">Since the collapse of the Kremlin-supported government in February 2014, Ukraine has been affected by political and economic turmoil.</p>
+                        <p class="line1">Since the collapse of the Kremlin-supported government on February 2014, Ukraine has been affected by political and economic turmoil.</p>
 
-                        <p class="line2">What followed the collapse of the government was a period of uncertainty, armed conflict, bloody clashes between partizans of the two factions and a significant number of people killed or wounded. </p>
+                        <p class="line2">What followed the collapse of the government was a period of uncertainty, armed conflict, bloody clashes between partizans of the two factions and a significant number of casualties. </p>
                     </div>
                 </div>
             </div>
@@ -122,10 +122,12 @@
                             What followed the turmoil was the emergence of a pro-Western, pro-reform government and an energized public generally anxious to lessen Moscow's influence and committed to addressing the need for serious reforms.
                         </p>
                         <p> Ukraine's problems are not solely political and economical. Russia responded to the change of government in 2014 by seizing Ukraine's Crimea region and annexing it.
-                            The influence of Russia spread to eastern Ukraine. This created two groups that were behind separate interest, the eastern Ukraine and the rest of the country. Thus the conflict between them for Russian vs western interests.
-                            The separatist militants are financed and equipped by Russian forces whereas the nationalist volunteers operate with Ukrainian security forces. Large amount of conventional weaponry is readily available to both side which has resulted in an increased usage of Improvised Explosives Devices (IED).
+                            The influence of Russia spread to eastern Ukraine. This created two groups that were behind separate interest, the Eastern Ukraine and the rest of the country.
+                            Thus the conflict between these two groups for Russian vs Western interests.
+                            The separatist militants are financed and equipped by Russian forces whereas the nationalist volunteers operate with Ukrainian security forces.
+                            Large amount of conventional weaponry are readily available to both sides which has resulted in an increased usage of Improvised Explosives Devices (IED).
                         </p>
-
+                        <p></p>
                         <b>Improvised Explosive Devices (IED)</b>
                         <p></p>
                         <p>
@@ -138,7 +140,7 @@
                         </p>
                         <p>
                             IEDs, or Improvised Explosives Devices, are one of the main causes of causalities among troops and exact a heavy toll on local populations.
-
+                            We will be exploring the various IED incidents that happened in Ukraine. Through our series of visualizations we will explore where, what, and how these incidents happened.
                         </p>
                     </div>
                 </div>
