speakers not spearkers

--- a/map.html
+++ b/map.html
@@ -74,7 +74,7 @@
                 <div class="form-group">
                     <label><strong>Region color</strong>&nbsp;
                         <select class="form-control" id="regionColorSelect" onchange="regionColorSelect()">
-                            <option value="pct_russian_speakers">% Russian Spearkers</option>
+                            <option value="pct_russian_speakers">% Russian Speakers</option>
                             <option value="population">Population</option>
                             <option value="pop_density">Population Density</option>
                             <option value="pop_russians">Ukrainian Population</option>
