Work on tooltips, combo box labels

--- a/map.html
+++ b/map.html
@@ -72,7 +72,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
-                    <label><strong>Region color</strong>&nbsp;
+                    <label><strong>Regions by:</strong>&nbsp;
                         <select class="form-control" id="regionColorSelect" onchange="regionColorSelect()">
                             <option value="pct_russian_speakers">% Russian Speakers</option>
                             <option value="population">Population</option>
@@ -84,7 +84,7 @@
                             <option value="WIA">Persons Wounded</option>
                         </select>
                     </label>
-                    <label><strong>Circle color</strong>&nbsp;
+                    <label><strong>Incidents by:</strong>&nbsp;
                         <select class="form-control" id="circleColorSelect" onchange="circleColorSelect()">
                             <option value="type">IED Type</option>
                             <option value="effect">Effect</option>
