--- a/map.html
+++ b/map.html
@@ -97,7 +97,10 @@
             </div>
         </div>
         <div class="row">
-            <div id="mapVis" class="col-md-6" style="padding: 0px"></div>
+        	<div class="col-md-6">
+	            <div id="mapVis" style="padding: 0px"></div>
+	            <div id="areaVis" style="padding: 0px"></div>
+        	</div>
             <div id="heatMatrixVis" class="col-md-6" style="padding: 0px"></div>
         </div>
 
@@ -119,6 +122,7 @@
 
     <!-- Load Page libraries -->
     <script type="text/javascript" src="js/map.js"></script>
+    <script type="text/javascript" src="js/area.js"></script>
     <script type="text/javascript" src="js/timeline.js"></script>
     <script type="text/javascript" src="js/counts.js"></script>
     <script type="text/javascript" src="js/map-main.js"></script>
