--- a/how.html
+++ b/how.html
@@ -34,8 +34,8 @@
                         By clustering the incident reports in this method we can see that most similar incidents that were reported in metro stations and administration buildings were hoax or false reports which leaded to no causalities.
                     </p>
                     <div class="button-list">
-                        <span><button type="button" class="btn btn-primary" onclick="showMeSoldiersKilled()">Reports where Soldiers were killed</button></span>
-                        <span><button type="button" class="btn btn-primary" onclick="showMeWeaponsNoCasuality()">Reports with weapons/explosives but no Casualty</button></span>
+                        <span><button type="button" class="btn btn-primary" onclick="showMeSoldiersKilled()">Show Me Reports Where People Died</button></span>
+                        <span><button type="button" class="btn btn-primary" onclick="showMeWeaponsNoCasuality()">Show Me Reports With Weapons/Explosives</button></span>
                     </div>
                 </div>
             </div>
