--- a/map.html
+++ b/map.html
@@ -97,10 +97,7 @@
             </div>
         </div>
         <div class="row">
-        	<div class="col-md-6">
-	            <div id="mapVis" style="padding: 0px"></div>
-	            <div id="areaVis" style="padding: 0px"></div>
-        	</div>
+        	<div class="col-md-6" id="mapVis" style="padding: 0px"></div>
             <div id="heatMatrixVis" class="col-md-6" style="padding: 0px"></div>
         </div>
 
